--- a/src/assets/scss/themes/pages/_authentication.scss
+++ b/src/assets/scss/themes/pages/_authentication.scss
@@ -8,11 +8,13 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+
 	.auth-minimal-inner {
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
 		padding: 0;
+
 		.minimal-card-wrapper {
 			width: 100%;
 			max-width: 450px;
@@ -20,11 +22,13 @@
 		}
 	}
 }
+
 /*auth-cover*/
 .auth-cover-wrapper {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
 	.auth-cover-content-inner {
 		float: left;
 		display: flex;
@@ -32,18 +36,21 @@
 		min-height: 100vh;
 		width: 100%;
 		max-width: calc(100% - 550px);
+
 		.auth-cover-content-wrapper {
 			display: flex;
 			flex-direction: column;
 			min-height: 100vh;
 			padding: 0;
+
 			.auth-img {
 				width: 600px;
 				margin: auto auto;
-				mix-blend-mode: multiply;
+				// mix-blend-mode: multiply;
 			}
 		}
 	}
+
 	.auth-cover-sidebar-inner {
 		float: right;
 		display: flex;
@@ -53,11 +60,13 @@
 		max-width: 550px;
 		background-color: $white;
 		box-shadow: $card-shadow;
+
 		.auth-cover-card-wrapper {
 			display: flex;
 			flex-direction: column;
 			min-height: 100vh;
 			padding: 0;
+
 			.auth-cover-card {
 				width: 100%;
 				max-width: 450px;
@@ -66,16 +75,19 @@
 		}
 	}
 }
+
 /*auth-creative*/
 .auth-creative-wrapper {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+
 	.auth-creative-inner {
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
 		padding: 0;
+
 		&:after {
 			top: 0;
 			bottom: 0;
@@ -84,10 +96,12 @@
 			position: fixed;
 			background: $gray-200;
 		}
+
 		.creative-card-wrapper {
 			width: 100%;
 			max-width: 1000px;
 			margin: auto auto;
+
 			.creative-card-body {
 				width: 100%;
 				max-width: 450px;
