--- a/src/assets/scss/themes/widgets/_widgets-statistics.scss
+++ b/src/assets/scss/themes/widgets/_widgets-statistics.scss
@@ -3,3 +3,20 @@
 <--! Widgets Statistics !-->
 <--!----------------------------------------------------------------!-->
 */
+
+
+.social-media-card {
+    cursor: pointer;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+    &:hover {
+        transform: scale(1.05); // Slightly scale the card on hover
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); // Optional shadow effect
+    }
+}
+
+.card-instagram {
+    background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    border: none;
+    outline: none;
+}
