Add user management features: create and edit user forms, update routing, and enhance dropdown component with search functionality

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -83,6 +83,7 @@
 @import "themes/pages/report-tmesheets";
 @import "themes/pages/help-knowledgebase";
 @import "themes/pages/setting";
+@import "themes/pages/edit-user";
 
 // Pluginss
 @import "themes/plugins/pace";
